--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  background: #c7375f;
+  color: #f0f4f7;
+  padding: 1em 2em;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+
+.countdownDisplay {
+  font-size: 100px;
+  margin: 0;
+}
+.jingleBells-image {
+  display: flex;
+  position: relative;
+  width: 125px;
+  height: 60px;
+}
+
+.jingleBells-container {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 800px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.santa-container {
+  display: flex;
+  justify-content: start;
+  position: relative;
+  width: 300px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.reindeer-container {
+  display: flex;
+  justify-content: space-evenly;
+  position: relative;
+  width: 300px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.animate__animated.animate__fadeOutRightBig {
+  --animate-duration: 3s;
+}
+
+.animate__animated.animate__wobble {
+  --animate-duration: 2s;
 }
