--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: darkgreen;
+  display:flex;
+  position:relative;
+  margin:0;
   min-height: 100vh;
+  max-width:100%;
+  max-height:100%;
   display: flex;
   flex-direction: column;
   align-items: center;
