app rework update

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: darkgreen;
+  background-color: #006400;
   display: flex;
   position: relative;
   margin: 0;
