--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.cdnfonts.com/css/mountains-of-christmas");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Mountains of Christmas", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -27,6 +29,10 @@ code {
 .countdownDisplay {
   font-size: 100px;
   margin: 0;
+}
+
+#christmasCountdown {
+  font-size: 75px;
 }
 
 .christmas-tree {
@@ -134,5 +140,9 @@ code {
   .countdownDisplay {
     font-size: 50px;
     margin: 0;
+  }
+
+  #christmasCountdown {
+    font-size: 35px;
   }
 }
